[tool.poetry]
name = "tor_db"
version = "0.1.0"
description = "A test database manager customized for ToR -- a standalone version of the Django ORM + our models!"
authors = ["Grafeas Group, Ltd. <devs@grafeas.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
